Fixed the bug of z-index

--- a/assets/styles/custom/sidebar.scss
+++ b/assets/styles/custom/sidebar.scss
@@ -1,6 +1,6 @@
 .sidebar {
   height: 100%;
-  z-index: 1;
+  z-index: 1000;
   top: 0;
   bottom: 0;
   box-shadow: 0 0 35px 0 rgb(154 161 171 / 15%);
